--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.4.1.tar.xz: b02811264b6d6fd790d4f3b68f42d6162e73fc4f
+  qtsensors-opensource-src-5.5.0-alpha.tar.xz: d672a7bbb3bf66d9f7519a3d3c586a3f54c46e19
