Update to 5.5.0 beta

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.5.0-alpha.tar.xz: d672a7bbb3bf66d9f7519a3d3c586a3f54c46e19
+  qtsensors-opensource-src-5.5.0-beta.tar.xz: 02d4fcdd1619747156f0e2479de01d244fa6f32f
