--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.5.0-beta.tar.xz: 02d4fcdd1619747156f0e2479de01d244fa6f32f
+  qtsensors-opensource-src-5.5.0-rc.tar.xz: e9f6dd62abbfa86e0d2d6826de644ee748d28e92
