Update to 5.5.0 final

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.5.0-rc.tar.xz: e9f6dd62abbfa86e0d2d6826de644ee748d28e92
+  qtsensors-opensource-src-5.5.0.tar.xz: bd4b2fb7685f80ef1661ced90ff665b4b27216aa
