--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.7.0.tar.xz: 0e84a4706db49292e2e2f4c860676c7cd2d00a9b
+  qtsensors-opensource-src-5.8.0-beta.tar.xz: aaf37c09276aeef8675b3e57aa6dc2eb4ea7ab88
