--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.8.0-beta.tar.xz: aaf37c09276aeef8675b3e57aa6dc2eb4ea7ab88
+  qtsensors-opensource-src-5.8.0-rc.tar.xz: 19a7f33b3fa5f82af7624cfb33bc72a7d8f87747
