--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.8.0-rc.tar.xz: 19a7f33b3fa5f82af7624cfb33bc72a7d8f87747
+  qtsensors-opensource-src-5.8.0.tar.xz: 5f5f995a6bbb37c2ea8ec9022458ca3c7002fecf
