--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.8.0.tar.xz: 5f5f995a6bbb37c2ea8ec9022458ca3c7002fecf
+  qtsensors-opensource-src-5.9.0-alpha.tar.xz: 3a9543fe27e4d2a0cce9090b33760eae21d4dd13
