--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.9.0-alpha.tar.xz: 3a9543fe27e4d2a0cce9090b33760eae21d4dd13
+  qtsensors-opensource-src-5.9.0-beta.tar.xz: 9cc7959100f19b1326eb3787a4cf8e703e1b5fcd
