Update to 5.9.0-beta4

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.9.0-beta.tar.xz: 9cc7959100f19b1326eb3787a4cf8e703e1b5fcd
+  qtsensors-opensource-src-5.9.0-beta4.tar.xz: fc4de1602037003381361c1efc2086f0976637c6
