Update to 5.9.0-rc2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.9.0-rc.tar.xz: 65faa7ed335f7be34336a5e332cb2036bec69f3f
+  qtsensors-opensource-src-5.9.0-rc2.tar.xz: 193ed3792de3e07e314767418d88993a649e4090
