--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.9.0-rc2.tar.xz: 193ed3792de3e07e314767418d88993a649e4090
+  qtsensors-opensource-src-5.9.0.tar.xz: 358985d54afd0cb560ad63dedf332ff32b870ad9
