Update to 5.10.0-beta

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-opensource-src-5.9.2.tar.xz: 69e6efe272923a0a9074f251d90bd1a7692c4243
+  qtsensors-everywhere-src-5.10.0-beta.tar.xz: 7a8bb0cefc3e4dbea913b78775276854140f6065
