--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.10.0-beta.tar.xz: 7a8bb0cefc3e4dbea913b78775276854140f6065
+  qtsensors-everywhere-src-5.10.0.tar.xz: 4c3162d48ffc2ab262ae36fc7c688e48edbecc89
