--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.10.0.tar.xz: 7fc386d372a69e83421618871e03840352c6b4f2
+  qtsensors-everywhere-src-5.10.0-beta4.tar.xz: 33e07b020bf86db2814547cab1a44a09c0542390
