Update to 5.10.0-rc1

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   qtsensors-everywhere-src-5.10.0-beta4.tar.xz: 33e07b020bf86db2814547cab1a44a09c0542390
+  qtsensors-everywhere-src-5.10.0-rc1.tar.xz: 99e13d3b40f86c66cd182a09db9d5732ce63040d
