Update to 5.10.0-rc3

--- a/.abf.yml
+++ b/.abf.yml
@@ -2,3 +2,4 @@ sources:
   qtsensors-everywhere-src-5.10.0-beta4.tar.xz: 33e07b020bf86db2814547cab1a44a09c0542390
   qtsensors-everywhere-src-5.10.0-rc1.tar.xz: 99e13d3b40f86c66cd182a09db9d5732ce63040d
   qtsensors-everywhere-src-5.10.0-rc2.tar.xz: 6707060c5a175707db0966c741757e5fa7f99ba8
+  qtsensors-everywhere-src-5.10.0-rc3.tar.xz: 7b7b4b43bbce421ec2ead6e483c8edd67c84095d
