--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.10.0-rc3.tar.xz: 7b7b4b43bbce421ec2ead6e483c8edd67c84095d
+  qtsensors-everywhere-src-5.10.0.tar.xz: a8e6b00851f2061192cbd34216bde7adde0271e6
