Update to 5.11.0-beta3

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.10.1.tar.xz: a12e5e9f99d8bda1ffda7efc4631723a8988495b
+  qtsensors-everywhere-src-5.11.0-beta3.tar.xz: 0beb542e541c643455289943d1882c65f1d52ac6
