--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.11.0-beta4.tar.xz: 5917e0df7b1f347cc3a8ad16de5daeacd3834059
+  qtsensors-everywhere-src-5.11.0-rc.tar.xz: d0783b54f606f257f3191e0737d331bff2a95b67
