Update to 5.11.0-rc2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.11.0-rc.tar.xz: d0783b54f606f257f3191e0737d331bff2a95b67
+  qtsensors-everywhere-src-5.11.0-rc2.tar.xz: 73c0431cc50b97888affc8c9d56eb7469bbbd141
