--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.11.0-rc2.tar.xz: 73c0431cc50b97888affc8c9d56eb7469bbbd141
+  qtsensors-everywhere-src-5.11.0.tar.xz: 1e0a3b423b33bf03e1310d84d2160775c8421f51
