--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   qtsensors-opensource-src-5.9.2.tar.xz: 69e6efe272923a0a9074f251d90bd1a7692c4243
-sources:
   qtsensors-opensource-src-5.9.6.tar.xz: 8602d6d802298e43b798c3ea0142958bb5747b21
+sources:
+  qtsensors-opensource-src-5.9.7.tar.xz: db638600df0eea23a90495123664756330783df8
