Update to 5.13.0-rc3

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.12.3.tar.xz: 6e72a5c95945a03ef68588f701469a3893c911cd
+  qtsensors-everywhere-src-5.13.0-rc3.tar.xz: 7894b98e95f6989a64446d0251b5354f2f5d1f53
