--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   qtsensors-everywhere-src-5.13.0-rc3.tar.xz: 7894b98e95f6989a64446d0251b5354f2f5d1f53
+  qtsensors-everywhere-src-5.13.0.tar.xz: e236d0bad2964aa5e6dc059ec034c67d1c30a2cb
