--- a/.abf.yml
+++ b/.abf.yml
@@ -4,3 +4,4 @@ sources:
   qtsensors-everywhere-src-5.14.0-beta2.tar.xz: a5e0abf2f0853d29f5135a7eb50ec58f239ef9bc
   qtsensors-everywhere-src-5.14.0-beta3.tar.xz: a3ba8511ca886d3f87930cf0d7f1675e12affab1
   qtsensors-everywhere-src-5.14.0-rc.tar.xz: 8b9e83635508beba7f5954064b3ea188e7caa83c
+  qtsensors-everywhere-src-5.14.0.tar.xz: 3b13d02d4d6abab1a6b7d75fe02e47d957e4d9a9
