--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.14.1.tar.xz: 3c368a0345cf2c9045c1727d263ee731b0bf716e
+  qtsensors-everywhere-src-5.15.0-alpha.tar.xz: 5c191373cb42e7211fe08de8fa802d0b446abdb9
