--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   qtsensors-everywhere-src-5.15.0-alpha.tar.xz: 5c191373cb42e7211fe08de8fa802d0b446abdb9
+  qtsensors-everywhere-src-5.15.0-beta1.tar.xz: fb1204742f50acfbb8cf38847a686a3d6aab0009
