--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,4 @@
 sources:
   qtsensors-everywhere-src-5.15.0-alpha.tar.xz: 5c191373cb42e7211fe08de8fa802d0b446abdb9
   qtsensors-everywhere-src-5.15.0-beta1.tar.xz: fb1204742f50acfbb8cf38847a686a3d6aab0009
+  qtsensors-everywhere-src-5.15.0-beta2.tar.xz: 0f9c3db11db2e49467c71aac2fe5c5a50f4d0f90
