Update to 5.15.0-rc

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.15.0-beta4.tar.xz: 6fabd6b6742b1aec3dad5827718dd8dd3e72d819
+  qtsensors-everywhere-src-5.15.0-rc.tar.xz: e22654e94e988118ae13eac1f17695417c1957b8
