Update to 5.15.0-rc2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.15.0-rc.tar.xz: e22654e94e988118ae13eac1f17695417c1957b8
+  qtsensors-everywhere-src-5.15.0-rc2.tar.xz: 588b4827b91b258c2120e2079a2958f20db22584
