--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtsensors-everywhere-src-5.15.0-rc2.tar.xz: 588b4827b91b258c2120e2079a2958f20db22584
+  qtsensors-everywhere-src-5.15.0.tar.xz: b954a47bf6bebd78e6a92654f8e0ad7802b3536d
